syntax = "proto3";

option go_package = "example.com/grpc-todo/todo";

package auth;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponce {
    string accessToken = 1;
    string refreshToken = 2;
}

service Auth {
    rpc Login(LoginRequest) returns (LoginResponce);
}